--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "generate:key": "ts-node -P tsconfig.json src/commands/generate-key.command.ts"
   },
   "dependencies": {
-    "@nestjs/cache-manager": "^2.3.0",
+    "@keyv/redis": "^5.0.0",
     "@nestjs/common": "^10.4.12",
     "@nestjs/core": "^10.4.12",
     "@nestjs/jwt": "^10.2.0",
@@ -30,8 +30,7 @@
     "@nestjs/websockets": "^11.0.5",
     "@prisma/client": "6.0.1",
     "bcryptjs": "^2.4.3",
-    "cache-manager": "^4.1.0",
-    "cache-manager-redis-yet": "^4.2.0",
+    "cacheable": "^1.10.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "husky": "^9.1.7",
