--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.4.12",
     "@nestjs/platform-socket.io": "^11.0.5",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.0.5",
     "@prisma/client": "6.0.1",
     "bcryptjs": "^2.4.3",
