--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@keyv/redis": "^5.0.0",
     "@nestjs/common": "^10.4.12",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.4.12",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.4.12",
